--- a/package.yml
+++ b/package.yml
@@ -1,6 +1,6 @@
 package: neues_structure
 version: '6.0.0-dev-2025-30-01'
-author: 'Alexander Walther für FriendsOfREDAXO'
+author: 'Friends Of REDAXO'
 supportpage: https://github.com/FriendsOfREDAXO/neues_structure
 
 
